k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-admin-cms-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |+
      rewrite ^/api/(.*)$ /$1 break;
spec:
  rules:
    - host: testtuchuang.top
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: go-admin-cms-nginx
                port:
                  number: 80
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: go-admin-cms-api
                port:
                  number: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-admin-cms-nginx
spec:
  selector:
    app: go-admin-cms-nginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: go-admin-cms-api
spec:
  selector:
    app: go-admin-cms-api
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-admin-cms-nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-admin-cms-nginx
  template:
    metadata:
      name: go-admin-cms-nginx
      labels:
        app: go-admin-cms-nginx
    spec:
      containers:
        - name: go-admin-cms-nginx
          image: registry.cn-hangzhou.aliyuncs.com/tanwuyang/go-admin-cms-home:v2021_05_13_09_03
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/conf.d/
              name: nginx-config
      volumes:
        - name: nginx-config
          configMap:
            name: go-admin-cms-nginx-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-admin-cms-api
spec:
  selector:
    matchLabels:
      app: go-admin-cms-api
  template:
    metadata:
      name: go-admin-cms-api
      labels:
        app: go-admin-cms-api
    spec:
      containers:
        - name: go-admin-cms
          image: registry.cn-hangzhou.aliyuncs.com/tanwuyang/go-admin-cms-admin:v2021_05_12_17_47
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /application/conf/
              name: api-config
      volumes:
        - name: api-config
          configMap:
            name: go-admin-api-config
